After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 769534 - g_unix_signal_source_new does not support SIGWINCH
g_unix_signal_source_new does not support SIGWINCH
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: general
2.48.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2016-08-05 07:41 UTC by Jan Alexander Steffens (heftig)
Modified: 2017-04-08 05:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] g_unix_signal_source_new: Add SIGWINCH (1.45 KB, patch)
2017-03-09 10:30 UTC, Jan Alexander Steffens (heftig)
committed Details | Review

Description Jan Alexander Steffens (heftig) 2016-08-05 07:41:33 UTC
I'm trying to use ptpython in combination with the gbulb asyncio loop. ptpython uses prompt_toolkit, which attempts to register a SIGWINCH handler with the event loop. gbulb calls g_unix_signal_source_new, which fails since SIGWINCH is not whitelisted.
Comment 1 Jordan Yelloz 2016-10-14 17:18:14 UTC
I've been interested in why SIGWINCH is not supported as well. I've tried this a while ago when writing a ncurses application with a GLib event loop and would have found this useful. I've added SIGWINCH to the whitelist in my GLib source and it works fine for me. Is there a decision process in place that determines which signal numbers will be supported and which won't?
Comment 2 Jan Alexander Steffens (heftig) 2017-03-09 10:30:36 UTC
Created attachment 347540 [details] [review]
[PATCH] g_unix_signal_source_new: Add SIGWINCH

Assume this won't go into 2.52 anymore, so say it was added in 2.54.
Comment 3 Colin Walters 2017-03-09 14:03:32 UTC
Review of attachment 347540 [details] [review]:

LGTM