g_unix_signal_source_new: Add SIGWINCH

Assume this won't go into 2.52 anymore, so say it was added in 2.54.

https://bugzilla.gnome.org/show_bug.cgi?id=769534