glib/glib-unix.c
@@ -187,7 +187,7 @@ g_unix_set_fd_nonblocking (gint       fd,
  * Create a #GSource that will be dispatched upon delivery of the UNIX
  * signal @signum.  In GLib versions before 2.36, only `SIGHUP`, `SIGINT`,
  * `SIGTERM` can be monitored.  In GLib 2.36, `SIGUSR1` and `SIGUSR2`
- * were added.
+ * were added. In GLib 2.54, `SIGWINCH` was added.
  *
  * Note that unlike the UNIX default, all sources which have created a
  * watch will be dispatched, regardless of which underlying thread
@@ -216,7 +216,8 @@ GSource *
 g_unix_signal_source_new (int signum)
 {
   g_return_val_if_fail (signum == SIGHUP || signum == SIGINT || signum == SIGTERM ||
-                        signum == SIGUSR1 || signum == SIGUSR2, NULL);
+                        signum == SIGUSR1 || signum == SIGUSR2 || signum == SIGWINCH,
+                        NULL);
 
   return _g_main_create_unix_signal_watch (signum);
 }
